font size footer

--- a/game.html
+++ b/game.html
@@ -48,7 +48,7 @@
     </div>
   </main>
   <footer class="game-line mt-5">
-    <p class="text-footer-game text-center text-white pt-3 m-0">pilargarciaroyo@gmail.com - +56 9 9440 4516</p>>
+    <p class="text-footer-game text-center text-white pt-3 m-0">pilargarciaroyo@gmail.com / +56 9 9440 4516</p>>
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
