--- a/index1.html
+++ b/index1.html
@@ -104,12 +104,9 @@
     </section>
     </main>
 
-    <footer class="footer">
+    <footer class="footer pb-5">
         <div id="footerContainer">
-            <ul id="socialIconsList" class="nav flex-column">
-                <p class="text-center"><a class="whatsapp-footer text-white" href="https://wa.me/NUMERO_DE_CELULAR"
-                        target="_blank"> <i class="fab fa-whatsapp text-white"></i> +56 994 40 45 16</a></p>
-            </ul>
+            <ul id="socialIconsList" class="nav flex-column"></ul>
         </div>
     </footer>
 
