--- a/studies.html
+++ b/studies.html
@@ -176,10 +176,7 @@
 
   <footer class="footer w-100">
     <div id="footerContainer" class="container-fluid w-100">
-      <ul id="socialIconsList" class="nav flex-column">
-        <p class="text-center"><a class="whatsapp-footer text-white" href="https://wa.me/NUMERO_DE_CELULAR"
-            target="_blank"> <i class="fab fa-whatsapp text-white"></i> +56 994 40 45 16</a></p>
-      </ul>
+      <ul id="socialIconsList" class="nav flex-column"></ul>
     </div>
   </footer>
 
