--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <section class="portfolio-experiment">
                     <a>
                         <h1 class="epigrafeTituloCover text-secondary">pilar garcía</h1>
-                        <span class="text text-secondary">diseñadora web</span>
+                        <span class="parrafo-cover text-secondary">diseñadora web</span>
                         <span class="line -right"></span>
                         <span class="line -top"></span>
                         <span class="line -left"></span>
