media query game

--- a/game.html
+++ b/game.html
@@ -35,10 +35,15 @@
           id="result">
           0</span></h3>
     </div>
-    <div class="m-5">
+    <div class="m-5 d-none d-md-block">
       <a class="rainbow rainbow-1 m-5" href="./index1.html"><i class="fas fa-arrow-left"></i><i
           class="fas fa-home mx-2"></i>Volver al home</a>
       <a class="rainbow rainbow-1 m-5" onclick="resetBoard()"><i class="fas fa-undo me-2"></i>Volver a jugar</a>
+    </div>
+    <div class="m-5 d-block d-md-none">
+      <a class="rainbow rainbow-1 m-2" href="./index1.html"><i class="fas fa-arrow-left"></i><i
+          class="fas fa-home mx-1"></i></a>
+      <a class="rainbow rainbow-1 m-2" onclick="resetBoard()"><i class="fas fa-undo mx-2"></i></a>
     </div>
   </header>
   <main class="row text-center">
