hr en front end proyectos

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                                 <img src="assets/Img/animales.png" class="d-block w-100" alt="...">
                             </div>
                             <div class="col">
-                                <img src="assets/Img/portafolioDisenio.png" class="d-block w-100" alt="...">
+                                <img src="assets/Img/game.png" class="d-block w-100" alt="...">
                             </div>
                             <div class="col">
                                 <img src="assets/Img/landing-examen-td.png" class="d-block w-100" alt="...">
