--- a/proyects.html
+++ b/proyects.html
@@ -209,7 +209,7 @@
         </div>
         <!-- INICIO CUERPO DE 2do TABS PROGRAMACION-->
         <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
-          <section class="container my-5" data-aos="fade-up">
+          <section class="container my-5 pb-3" data-aos="fade-up">
             <h6 class="proyects-subtitle text-center mt-5">Programación de e-commerce</h6>
             <h3 class="proyects-title text-center mt-2 mb-5">Toolmania: Header y Checkout</h3>
             <span class="text-secondary ms-5">Ver la web aquí:</span><a href="http://toolmania.cl/" target="_blank"
@@ -217,16 +217,16 @@
               <p class="ms-5 mb-5">http://toolmania.cl/</p>
             </a>
             <img alt="Toolmania" loading="lazy" width="100%" height="500" ; src="./assets/Img/web-toolmania.png">
-          </section>
-          <section class="container my-5" data-aos="fade-up">
+          </section><hr>
+          <section class="container my-5 py-3" data-aos="fade-up">
             <h6 class="proyects-subtitle text-center mt-5">Diseño UI & Desarrollo Front End</h6>
             <h3 class="proyects-title text-center mt-2 mb-5">One Stock: programa de logística Nodriza SpA</h3>
             <div class="containerImgOneStock">
               <img alt="One Stock parte 1" loading="lazy" width="100%" height="500" src="./assets/Img/OneStock1.png">
               <img alt="One Stock parte 2" loading="lazy" width="100%" height="500" src="./assets/Img/OneStock2.png">
             </div>
-          </section>
-          <section class="container my-5" data-aos="fade-up">
+          </section><hr>
+          <section class="container my-5 py-3" data-aos="fade-up">
             <h6 class="proyects-subtitle text-center mt-5">Diseño UI & Desarrollo Front End</h6>
             <h3 class="proyects-title text-center mt-2 mb-5">Landing Page Estudio de Mercado IDMA 2023</h3>
             <span class="text-secondary">Ver código aquí:</span><a href="https://github.com/nosotros6?tab=repositories"
@@ -239,8 +239,8 @@
             </a>
             <img alt="Apoyo digital Estudio IDMA" loading="lazy" width="100%" height="500" ;
               src="./assets/Img/idma.png">
-          </section>
-          <section class="container my-5" data-aos="fade-up">
+          </section><hr>
+          <section class="container my-5 py-3" data-aos="fade-up">
             <h6 class="proyects-subtitle text-center mt-5">Diseño UI & Desarrollo Front End</h6>
             <h3 class="proyects-title text-center mt-2 mb-5">Mi Primer Portafolio Web</h3>
             <span class="text-secondary">Ver código aquí:</span><a href="https://github.com/nosotros6?tab=repositories"
@@ -252,8 +252,17 @@
               <p>https://nosotros6.github.io/cv-pili/</p>
             </a>
             <img alt="Mi 1er Portafolio" loading="lazy" width="100%" height="500" ; src="./assets/Img/portafolio.png">
-          </section>
-          <section class="container my-5" data-aos="fade-up">
+          </section><hr>
+          <section class="container my-5 py-3" data-aos="fade-up">
+            <h6 class="proyects-subtitle text-center mt-5">Diseño UI & Desarrollo Front End</h6>
+            <h3 class="proyects-title text-center mt-2 mb-5">Memory Game</h3>
+            <span class="text-secondary">Ver la web aquí:</span><a href="game.html"
+              target="_blank" rel="noopener noreferrer">
+              <p>https://nosotros6.github.io/pilar-garcia-portafolio/game.html</p>
+            </a>
+            <img alt="Mi 1er Portafolio" loading="lazy" width="100%" height="500" ; src="./assets/Img/game.png">
+          </section><hr>
+          <section class="container my-5 py-3" data-aos="fade-up">
             <h6 class="proyects-subtitle text-center mt-5">Examen Certificación TD</h6>
             <h3 class="proyects-title text-center mt-2 mb-5">Landing Page Adopta una Mascota</h3>
             <span class="text-secondary">Ver código aquí:</span><a href="https://github.com/nosotros6?tab=repositories"
@@ -266,8 +275,8 @@
             </a>
             <img alt="Examen Front End" loading="lazy" width="100%" height="500" ;
               src="./assets/Img/landing-examen-td.png">
-          </section>
-          <section class="container my-5" data-aos="fade-up">
+          </section><hr>
+          <section class="container my-5 py-3" data-aos="fade-up">
             <h6 class="proyects-subtitle text-center mt-5">Ejercicios Bootcamp Desarrollo Front End</h6>
             <h3 class="proyects-title text-center mt-2 mb-5">Landing Page Ricomida</h3>
             <span class="text-secondary">Ver código aquí:</span><a href="https://github.com/nosotros6?tab=repositories"
@@ -279,8 +288,8 @@
               <p>https://nosotros6.github.io/ricomida-designer-ux-ui/</p>
             </a>
             <img alt="Proyecto Ricomida" loading="lazy" width="100%" height="500" ; src="./assets/Img/ricomida.png">
-          </section>
-          <section class="container my" data-aos="fade-up">
+          </section><hr>
+          <section class="container my-5 py-3" data-aos="fade-up">
             <h6 class="proyects-subtitle text-center mt-5">Ejercicios Bootcamp Desarrollo Front End</h6>
             <h3 class="proyects-title text-center mt-2 mb-5">Animales Salvajes</h3>
             <span class="text-secondary">Ver código aquí:</span><a href="https://github.com/nosotros6?tab=repositories"
@@ -293,8 +302,8 @@
             </a>
             <img alt="Proyecto Animales Salvajes" loading="lazy" width="100%" height="500" ;
               src="./assets/Img/animales.png">
-          </section>
-          <section class="container my-5" data-aos="fade-up">
+          </section><hr>
+          <section class="container my-5 py-3" data-aos="fade-up">
             <h6 class="proyects-subtitle text-center mt-5">Ejercicios Bootcamp Desarrollo Front End</h6>
             <h3 class="proyects-title text-center mt-2 mb-5">Cursos Alfa Web</h3>
             <span class="text-secondary">Ver código aquí:</span><a href="https://github.com/nosotros6?tab=repositories"
