hr en content manager proyectos

--- a/proyects.html
+++ b/proyects.html
@@ -320,33 +320,33 @@
 
         <!-- INICIO CUERPO DE 3er TABS -->
         <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">
-          <section class="container" data-aos="fade-up">
+          <section class="container my-5 pb-3" data-aos="fade-up">
             <h3 class="proyects-title text-center pt-5 mt-5 mb-5">Boletines Mensuales y Guiones para empresas</h3>
             <iframe src="./assets/pdf/acop-boletin.pdf" width="100%" height="500"></iframe>
-          </section>
-          <section class="container" data-aos="fade-up">
+          </section><hr>
+          <section class="container my-5 py-3" data-aos="fade-up">
             <h3 class="proyects-title text-center pt-5 mt-5 mb-5">Asesoría en Gestión de Contenidos para Fundación
               Entornasol</h3>
             <p class="m-5">Asesoría en desarrollo web y colaboración en la creación y gestión de contenidos para sitio
               web, redes sociales, campañas y cursos de la Fundación Entornasol y su programa CORFO "Tea Time Tiempo de
               CreSer". </p>
             <iframe src="./assets/pdf/yoga-entornasol.pdf" width="100%" height="500"></iframe>
-          </section>
-          <section class="container" data-aos="fade-up">
+          </section><hr>
+          <section class="container my-5 py-3" data-aos="fade-up">
             <h3 class="proyects-title text-center pt-5 mt-5 mb-5">Proyecto Content Manager / 2022</h3>
             <p class="m-5">Examen para la certificación de Content Manager, bootcamp Corfo y Talento Digital Chile
               (2022)</p>
             <iframe src="./assets/pdf/content-manager.pdf" width="100%" height="500"></iframe>
-          </section>
-          <section class="container" data-aos="fade-up">
+          </section><hr>
+          <section class="container my-5 py-3" data-aos="fade-up">
             <h3 class="proyects-title text-center pt-5 mt-5 my-5">Textos para Afiches de Campañas</h3>
             <img src="./assets/Img/afiche.png" width="100%" height="500" alt="Afiche">
-          </section>
-          <section class="container" data-aos="fade-up">
+          </section><hr>
+          <section class="container my-5 py-3" data-aos="fade-up">
             <h3 class="proyects-title text-center pt-5 mt-5 my-5">Gestión en RR.SS. y textos institucionales</h3>
             <iframe src="./assets/pdf/whatsapp.pdf" width="100%" height="500"></iframe>
-          </section>
-          <section class="container" data-aos="fade-up">
+          </section><hr>
+          <section class="container my-5 py-3" data-aos="fade-up">
             <h3 class="proyects-title text-center pt-5 mt-5 mb-5">Documentales Travesía, Historia de Concepción</h3>
             <p class="m-5">Producción, guiones y conducción de la serie de documentales Travesía, Historia de
               Concepción, financiado por Fondart, Corporación Cultural Pencopolitana y Gobierno Regional.</p>
@@ -355,8 +355,8 @@
               <p>Travesía, Historia de Concepción, capítulo 1</p>
             </a>
             <img src="./assets/Img/travesia.png" width="100%" height="500" alt="Travesía">
-          </section>
-          <section class="container" data-aos="fade-up">
+          </section><hr>
+          <section class="container my-5 py-3" data-aos="fade-up">
             <h3 class="proyects-title text-center pt-5 mt-5 mb-5">Estudio de Mercado para Instituto del Medio Ambiente
             </h3>
             <p class="m-5">Asesoría en la investigación y redacción del Estudio de Mercado sobre La Restauración de
