storytelling y storyboard en content manager proyectos

--- a/game.html
+++ b/game.html
@@ -27,7 +27,7 @@
       <!-- <img src="assets/img-game/logo-pili.png" alt="Logo de usuario" class="logo"> -->
       <span class="navbar-text text-white ms-4">pilar garcía</span>
     </a>
-    <span class="navbar-text text-white-50">>> la yapa</span>
+    <span class="navbar-text text-white-50">>> juego</span>
   </nav>
   <header class="text-center">
     <div class="my-5">
