--- a/proyects.html
+++ b/proyects.html
@@ -126,6 +126,10 @@
                         <h3 class="proyects-subtitle">Análisis Gestalt</h3>
                         <iframe src="./assets/pdf/ux-gestald-cedeus.pdf" width="100%" height="500"></iframe>
                       </section>
+                      <section class="container my-5">
+                        <h3 class="proyects-subtitle">Portafolio UX/UI para La Casa de La Lírica</h3>
+                        <iframe src="./assets/pdf/lirica.pdf" width="100%" height="500"></iframe>
+                      </section>
                     </div>
                   </div>
                 </div>
@@ -333,6 +337,15 @@
             <iframe src="./assets/pdf/yoga-entornasol.pdf" width="100%" height="500"></iframe>
           </section><hr>
           <section class="container my-5 py-3" data-aos="fade-up">
+            <h3 class="proyects-title text-center pt-5 mt-5 mb-5">Storytelling para Beca Salesforce 2023</h3>
+            <span class="text-secondary">Ver el video aquí:</span>
+            <a href="https://youtu.be/H1yVhMCbKoM"
+              target="_blank" rel="noopener noreferrer">
+              <p>https://youtu.be/H1yVhMCbKoM</p></a>
+            <p class="m-5">Con este storytelling de 3 minutos, requisito para la postulación, obtuve la Beca Women Force IT y Talento Digital 2023 para estudiar Salesforce. Mi relato destaca mis logros, habilidades y objetivos.</p>
+            <img src="./assets/Img/salesforce.png" width="100%" height="500"></img>
+          </section><hr>
+          <section class="container my-5 py-3" data-aos="fade-up">
             <h3 class="proyects-title text-center pt-5 mt-5 mb-5">Proyecto Content Manager / 2022</h3>
             <p class="m-5">Examen para la certificación de Content Manager, bootcamp Corfo y Talento Digital Chile
               (2022)</p>
@@ -345,6 +358,10 @@
           <section class="container my-5 py-3" data-aos="fade-up">
             <h3 class="proyects-title text-center pt-5 mt-5 my-5">Gestión en RR.SS. y textos institucionales</h3>
             <iframe src="./assets/pdf/whatsapp.pdf" width="100%" height="500"></iframe>
+          </section><hr>
+          <section class="container my-5 py-3" data-aos="fade-up">
+            <h3 class="proyects-title text-center pt-5 mt-5 my-5">Storyboard para app</h3>
+            <iframe src="./assets/pdf/storyboard.pdf" width="100%" height="500"></iframe>
           </section><hr>
           <section class="container my-5 py-3" data-aos="fade-up">
             <h3 class="proyects-title text-center pt-5 mt-5 mb-5">Documentales Travesía, Historia de Concepción</h3>
