actualizacion trabajos alkemy y relatoria edutecno

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Pilar García Royo</title>
     <meta name="author" content="Pilar García Royo">
     <meta name="description" content="Mi curriculum vitae como periodista, programadora front end y diseñadora Ux/Ui">
-    <meta name="keywords" content="curriculum, vitae, periodista, desarrollo, diseño, web, ux, ui, frontend, TI">
+    <meta name="keywords" content="curriculum vitae, periodista, desarrollo, diseño, web, ux, ui, frontend, TI, portafolio">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
