--- a/jobs.html
+++ b/jobs.html
@@ -63,11 +63,35 @@
         <div class="image-container">
           <img src="./assets/Img/logo-entornasol.png" class="card-img-top w-50 m-5" alt="Entornasol">
         </div>
-        <h3 class="card-title">Diseñadora Web / Gestión de Contenidos</h3>
+        <h3 class="card-title">Diseñadora Web</h3>
         <h4 class="card-subtitle">Fundación Entornasol / Programa Tea Time</h4>
         <p class="card-subtitle">Estrategias de comunicación, creación de contenidos, diseño Ux/Ui y desarrollo front
           end.</p>
         <p class="card-info" style="margin-left: 1px; margin-bottom: 20px;">Desde octubre de 2023 a la fecha</p>
+      </div>
+
+      <div id="card-jobs" class="card">
+        <div class="image-container">
+          <a href="https://www.alkemy.org/" target="_blank" class="card-link">
+          <img src="./assets/Img/logo-alkemy.png" class="card-img-top w-50 m-5" alt="Alkemy"></a>
+        </div>
+        <h3 class="card-title">Asistente de Tutorías</h3>
+        <h4 class="card-subtitle">Alkemy</h4>
+        <p class="card-subtitle">Desarrollo Web Fullstack Java</p>
+        <p class="card-info" style="margin-left: 1px; margin-bottom: 20px;">Desde enero de 2024 a la fecha</p>
+        <a href="https://www.alkemy.org/" target="_blank" class="card-link">Sitio web de la empresa</a>
+      </div>
+
+      <div id="card-jobs" class="card">
+        <div class="image-container">
+          <a href="https://edutecno.cl/" target="_blank" class="card-link">
+            <img class="card-img-top w-50 m-5" src="./assets/Img/logo-edutecno.png" alt="Web Edutecno"></a>
+        </div>
+        <h3 class="card-title">Relatora y Asistente de Tutorías</h3>
+        <h4 class="card-subtitle">Edutecno</h4>
+        <p class="card-subtitle">Diseño UX/UI y Front End Trainee</p>
+        <p class="card-info">Desde marzo de 2022 a la fecha</p>
+        <a href="https://edutecno.cl/" target="_blank" class="card-link">Sitio web de la empresa</a>
       </div>
 
       <div id="card-jobs" class="card">
@@ -78,23 +102,11 @@
         <div>
           <h3 class="card-title">Creación y Gestión de Contenidos</h3>
           <h4 class="card-subtitle">Agencia Galope</h4>
-          <p class="card-subtitle">Estrategias de comunicación, creación de contenidos y diseño Ux/Ui.</p>
+          <p class="card-subtitle">Estrategias de comunicación, creación de contenidos.</p>
           <p class="card-info" style="margin-left: 1px; margin-bottom: 20px;">Desde diciembre de 2022 a septiembre de
             2023</p>
           <a href="https://galope.cl/" target="_blank" class="card-link mb-5">Sitio web</a>
         </div>
-      </div>
-
-      <div id="card-jobs" class="card">
-        <div class="image-container">
-          <a href="https://edutecno.cl/" target="_blank" class="card-link">
-            <img class="card-img-top w-50 m-5" src="./assets/Img/logo-edutecno.png" alt="Web Edutecno"></a>
-        </div>
-        <h3 class="card-title">Asistente de tutor</h3>
-        <h4 class="card-subtitle">Edutecno</h4>
-        <p class="card-subtitle">Ayudantía de clases front end trainee.</p>
-        <p class="card-info">Desde marzo de 2022 a la fecha</p>
-        <a href="https://edutecno.cl/" target="_blank" class="card-link">Sitio web de la empresa</a>
       </div>
 
       <div id="card-jobs" class="card">
@@ -127,11 +139,23 @@
           <a href="https://teatropencopolitano.cl/" target="_blank" class="card-link">
             <img class="card-img-top w-50 m-5" src="./assets/Img/cultura.jpeg" alt="Teatro Pencopolitano"></a>
         </div>
-        <h3 class="card-title">Periodista</h3>
+        <h3 class="card-title">Directora Ejecutiva</h3>
         <h4 class="card-subtitle">Corporación Cultural Teatro Pencopolitano</h4>
         <p class="card-subtitle">Gestión Cultural y de Contenidos</p>
         <p class="card-info">Entre marzo de 1997 y marzo de 2009</p>
         <a href="https://teatropencopolitano.cl/" target="_blank" class="card-link">Sitio web de la empresa</a>
+      </div>
+      
+      <div id="card-jobs" class="card">
+        <div class="image-container">
+          <a href="https://www.chilevision.cl/" target="_blank" class="card-link">
+            <img class="card-img-top w-50 m-5" src="./assets/Img/logo-chilevision.png" alt="Chilevisión"></a>
+        </div>
+        <h3 class="card-title">Periodista Encargada de Difusión</h3>
+        <h4 class="card-subtitle">Chilevisión</h4>
+        <p class="card-subtitle">Estrategias de comunicación, creación de contenidos, RR.PP.</p>
+        <p class="card-info">Entre enero de 1991 y diciembre de 1994</p>
+        <a href="https://www.chilevision.cl/" target="_blank" class="card-link">Sitio web de la empresa</a>
       </div>
     </section>
 
