--- a/index1.html
+++ b/index1.html
@@ -51,23 +51,15 @@
     </section>
     <section class="textoHome row">
         <div class="col-12 col-lg-6 m-3">
-            <p>Hola! Me dicen Pili y te doy la bienvenida a mi portafolio. Soy Diseñadora Web, especializada en
-                Experiencia de Usuario, Gestión de Contenidos y Desarrollo Front End, con manejo de varios lenguajes
-                de
-                programación y frameworks que puedes <span> <a href="studies.html">revisar aquí.</a></span> Poseo el
-                título de
-                Periodista de la Universidad de
-                Chile con un diplomado en Marketing de la Universidad del Bío-Bío. Soy creativa y con buenas
-                habilidades
-                comunicacionales. Amo el trabajo en equipo, el diseño y la educación continua.</p>
-            <p>Desde que salí como Periodista de la Universidad de Chile, trabajé por 15 años en televisión, radio,
+            <p>¡Hola! Me dicen Pili y te doy la bienvenida a mi portafolio. Soy Diseñadora Web y me motiva combinar mi experiencia en Periodismo + Diseño UX/UI + Front End para crear proyectos digitales efectivos y accesibles. Disfruto trabajando con diversos lenguajes y herramientas que puedes <span> <a href="studies.html">revisar AQUÍ.</a></span></p>
+                <p>Me inspira poder contribuir al diseño de sitios web y a la comunicación fluida con los usuarios. Soy creativa y con buenas habilidades comunicacionales. Amo el trabajo en equipo y la educación continua.</p>
+            <p>Desde que salí como Periodista de la Universidad de Chile, trabajé durante 15 años en televisión, radio,
                 instituciones culturales y de educación. Luego, emprendí empresas propias y familiares que cerraron
                 por
                 la pandemia del Covid en 2020. En vez de desanimarme, vi la oportunidad de reinventarme
                 profesionalmente, abordando los nuevos desafíos de la información y las comunicaciones. Así fue como
                 llegó el diseño y la programación web.</p>
-            <p class="mt-5">Desde 2020, he trabajado de manera integrada para crear experiencias digitales
-                efectivas y satisfactorias, asegurando una comunicación fluida y efectiva con el usuario a través de
+            <p class="mt-3">Desde 2020, he trabajado de manera integrada para crear proyectos digitales satisfactorios, asegurando una buena comunicación a través de
                 distintas
                 estrategias, tales como: </p>
             <div class="pt-5">
