actualizacion logo entornasol

--- a/jobs.html
+++ b/jobs.html
@@ -61,7 +61,7 @@
     <section class="work-cards justify-content-center">
       <div id="card-jobs" class="card">
         <div class="image-container">
-          <img src="./assets/Img/logo-entornasol.png" class="card-img-top w-50 m-5" alt="Entornasol">
+          <img src="./assets/Img/logo-entornasol.jpg" class="card-img-top w-50 m-5" alt="Entornasol">
         </div>
         <h3 class="card-title">Diseñadora Web</h3>
         <h4 class="card-subtitle">Fundación Entornasol / Programa Tea Time</h4>
