cambios de redaccion en ultimos parrafos de inicio

--- a/index1.html
+++ b/index1.html
@@ -59,7 +59,7 @@
                 la pandemia del Covid en 2020. En vez de desanimarme, vi la oportunidad de reinventarme
                 profesionalmente, abordando los nuevos desafíos de la información y las comunicaciones. Así fue como
                 llegó el diseño y la programación web.</p>
-            <p class="mt-3">Desde 2020, he trabajado de manera integrada para crear proyectos digitales satisfactorios, asegurando una buena comunicación a través de
+            <p class="mt-3">Desde 2020, he trabajado de manera integrada para crear proyectos digitales exitosos, asegurando una buena comunicación a través de
                 distintas
                 estrategias, tales como: </p>
             <div class="pt-5">
@@ -68,11 +68,8 @@
         </div>
         <section class="col-12 col-lg-5 mt-3">
             <img src="./assets/Img/biobiovista.png" alt="Río Bío-Bío" id="rio-biobio">
-            <p class="mt-5">Investigar las tendencias de mercado; seleccionar las palabras clave para
-                mejorar la visibilidad en los motores de búsqueda (SEO); utilizar la narrativa para contar historias
-                que conecten emocionalmente con la audiencia; manejar herramientas de análisis, prestando atención a
-                la
-                retroalimentación de la audiencia, entre otras.</p>
+            <p class="mt-5">Investigar la experiencia de usuario, la accesibilidd y las tendencias de mercado; diseñar prototipos de baja y alta resolución; programar el front end; seleccionar las palabras clave en los motores de búsqueda (SEO); contar historias
+                que conecten emocionalmente con la audiencia; manejar herramientas de análisis, entre otras.</p>
             <p>Finalmente, te cuento que las fotografías de este portafolio son del campo donde vivo, en Hualqui, a
                 orillas del Río Bío Bío, Chile.</p>
             <p class="mb-5">Gracias :)</p>
