--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title>Pilar García Royo</title>
     <meta name="author" content="Pilar García Royo">
     <meta name="description" content="Mi curriculum vitae como periodista, programadora front end y diseñadora Ux/Ui">
-    <meta name="keywords" content="curriculum vitae, periodista, desarrollo, diseño, web, ux, ui, frontend, TI, portafolio">
+    <meta name="keywords"
+        content="curriculum vitae, periodista, desarrollo, diseño, web, ux, ui, frontend, TI, portafolio">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -27,8 +28,8 @@
             <div class="col-12 col-md-6">
                 <section class="portfolio-experiment">
                     <a>
-                        <h1 class="epigrafeTituloCover text-secondary">pilar garcía</h1>
-                        <span class="parrafo-cover text-secondary">diseñadora web</span>
+                        <h1 class="epigrafeTituloCover text-secondary">pilar garcía royo</h1>
+                        <span class="parrafo-cover text-secondary">periodista & diseñadora web</span>
                         <span class="line -right"></span>
                         <span class="line -top"></span>
                         <span class="line -left"></span>
@@ -38,7 +39,7 @@
 
                 <section class="cover-ingresar">
                     <a href="index1.html" class="cta">
-                        <span>ingresar</span>
+                        <span>mi portafolio</span>
                         <svg width="13px" height="10px" viewBox="0 0 13 10">
                             <path d="M1,5 L11,5"></path>
                             <polyline points="8 1 12 5 8 9"></polyline>
@@ -47,11 +48,50 @@
                 </section>
             </div>
             <div class="col-12 col-md-6 container espaciador-cover">
-                <!-- <div style="height: 400px;"></div> -->
+                <section class="row">
+                    <section class="contenedor-footer col-md-8">
+                        <a href="https://nosotros6.github.io/Teatro/" target="_blank" rel="noopener noreferrer">
+                            <img src="./assets/Img/footer-nuevo/teatro-dormido.png" alt="El Teatro Dormido" title="El Teatro Dormido"
+                                class="w-75 teatro mt-5">
+                        </a>
+                    </section>
+                    <section class="contenedor-footer col-md-4">
+                        <a href="https://nosotros6.github.io/desafio-td-ux/" target="_blank" rel="noopener noreferrer">
+                            <img src="./assets/Img/footer-nuevo/dirtyPaws.png" alt="Dirty Paws" title="Dirty Paws"
+                                class="dirty-paws mt-5 ms-5">
+                        </a>
+                    </section>
+                </section>
             </div>
         </section>
     </main>
-    <footer>
+    <footer class="row ms-5">
+        <section class="contenedor-footer col-md-3">
+            <a href="https://nosotros6.github.io/francisco-nocetti/" target="_blank" rel="noopener noreferrer">
+                <img src="./assets/Img/footer-nuevo/nocetti.png" alt="Blog Francisco Nocetti"
+                    title="Blog Francisco Nocetti" class="nocetti mx-5 mb-5">
+            </a>
+        </section>
+        <section class="contenedor-footer col-md-3">
+            <a href="https://nosotros6.github.io/cv-pili" target="_blank" rel="noopener noreferrer">
+                <img src="./assets/Img/footer-nuevo/portafolio-2021.png" alt="Portafolio 2021" title="Portafolio 2021"
+                    class="portafolio-2021 me-5 mb-5">
+            </a>
+        </section>
+        <section class="contenedor-footer col-md-3">
+            <a href="https://nosotros6.github.io/portafolio/" target="_blank" rel="noopener noreferrer">
+                <img src="./assets/Img/footer-nuevo/caqui-arbol.png" alt="Portafolio 2022" title="Portafolio 2022"
+                    class="caqui ms-5 mb-5">
+            </a>
+        </section>
+        <section class="contenedor-footer col-md-3">
+            <a href="https://nosotros6.github.io/Caleidos/" target="_blank" rel="noopener noreferrer">
+                <img src="./assets/Img/footer-nuevo/magda.png" alt="Fundación Entornasol" title="Fundación Entornasol"
+                    class="magda w-50 mx-5 mb-5">
+            </a>
+        </section>
+    </footer>
+    <!-- <footer>
         <section id="sec-carrusel">
             <div id="holaCarousel" class="carousel slide pb-3" data-bs-ride="carousel" data-bs-interval="3000"
                 data-bs-pause="false">
@@ -100,7 +140,7 @@
             </div>
 
         </section>
-    </footer>
+    </footer> -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
