d-none para footer de imagenes de portada

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </section>
             </div>
             <div class="col-12 col-md-6 container espaciador-cover">
-                <section class="row">
+                <section class="row d-none d-md-block">
                     <section class="contenedor-footer col-md-8">
                         <a href="https://nosotros6.github.io/Teatro/" target="_blank" rel="noopener noreferrer">
                             <img src="./assets/Img/footer-nuevo/teatro-dormido.png" alt="El Teatro Dormido" title="El Teatro Dormido"
@@ -65,7 +65,7 @@
             </div>
         </section>
     </main>
-    <footer class="row ms-5">
+    <footer class="row d-none d-md-block ms-5">
         <section class="contenedor-footer col-md-3">
             <a href="https://nosotros6.github.io/francisco-nocetti/" target="_blank" rel="noopener noreferrer">
                 <img src="./assets/Img/footer-nuevo/nocetti.png" alt="Blog Francisco Nocetti"
