d-none para tamaños distintos de main

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
     <header class="cover-line"></header>
     <main>
-        <section id="aboutme" class="row m-5">
+        <section id="aboutme" class="row d-none d-md-block m-5">
             <div class="col-12 col-md-6">
                 <section class="portfolio-experiment">
                     <a>
@@ -40,6 +40,46 @@
                 <section class="cover-ingresar">
                     <a href="index1.html" class="cta">
                         <span>mi portafolio</span>
+                        <svg width="13px" height="10px" viewBox="0 0 13 10">
+                            <path d="M1,5 L11,5"></path>
+                            <polyline points="8 1 12 5 8 9"></polyline>
+                        </svg>
+                    </a>
+                </section>
+            </div>
+            <div class="col-12 col-md-6 container espaciador-cover">
+                <section class="row d-none d-md-block">
+                    <section class="contenedor-footer col-md-8">
+                        <a href="https://nosotros6.github.io/Teatro/" target="_blank" rel="noopener noreferrer">
+                            <img src="./assets/Img/footer-nuevo/teatro-dormido.png" alt="El Teatro Dormido" title="El Teatro Dormido"
+                                class="w-75 teatro mt-5">
+                        </a>
+                    </section>
+                    <section class="contenedor-footer col-md-4">
+                        <a href="https://nosotros6.github.io/desafio-td-ux/" target="_blank" rel="noopener noreferrer">
+                            <img src="./assets/Img/footer-nuevo/dirtyPaws.png" alt="Dirty Paws" title="Dirty Paws"
+                                class="dirty-paws mt-5 ms-5">
+                        </a>
+                    </section>
+                </section>
+            </div>
+        </section>
+        <section id="aboutme" class="row main-movil m-5">
+            <div class="col-12 col-md-6">
+                <section class="portfolio-experiment">
+                    <a>
+                        <h1 class="epigrafeTituloCover text-secondary">pilar garcía</h1>
+                        <span class="parrafo-cover text-secondary">periodista & diseño web</span>
+                        <span class="line -right"></span>
+                        <span class="line -top"></span>
+                        <span class="line -left"></span>
+                        <span class="line -bottom"></span>
+                    </a>
+                </section>
+
+                <section class="cover-ingresar">
+                    <a href="index1.html" class="cta">
+                        <span>ingresar</span>
                         <svg width="13px" height="10px" viewBox="0 0 13 10">
                             <path d="M1,5 L11,5"></path>
                             <polyline points="8 1 12 5 8 9"></polyline>
