cambio a cards en footer de index

--- a/index.html
+++ b/index.html
@@ -23,48 +23,8 @@
 
 <body>
     <header class="cover-line"></header>
-    <main>
-        <section id="aboutme" class="row d-none d-md-block m-5">
-            <div class="col-12 col-md-6">
-                <section class="portfolio-experiment">
-                    <a>
-                        <h1 class="epigrafeTituloCover text-secondary">pilar garcía royo</h1>
-                        <span class="parrafo-cover text-secondary">periodista & diseñadora web</span>
-                        <span class="line -right"></span>
-                        <span class="line -top"></span>
-                        <span class="line -left"></span>
-                        <span class="line -bottom"></span>
-                    </a>
-                </section>
-
-                <section class="cover-ingresar">
-                    <a href="index1.html" class="cta">
-                        <span>mi portafolio</span>
-                        <svg width="13px" height="10px" viewBox="0 0 13 10">
-                            <path d="M1,5 L11,5"></path>
-                            <polyline points="8 1 12 5 8 9"></polyline>
-                        </svg>
-                    </a>
-                </section>
-            </div>
-            <div class="col-12 col-md-6 container espaciador-cover">
-                <section class="row d-none d-md-block">
-                    <section class="contenedor-footer col-md-8">
-                        <a href="https://nosotros6.github.io/Teatro/" target="_blank" rel="noopener noreferrer">
-                            <img src="./assets/Img/footer-nuevo/teatro-dormido.png" alt="El Teatro Dormido" title="El Teatro Dormido"
-                                class="w-75 teatro mt-5">
-                        </a>
-                    </section>
-                    <section class="contenedor-footer col-md-4">
-                        <a href="https://nosotros6.github.io/desafio-td-ux/" target="_blank" rel="noopener noreferrer">
-                            <img src="./assets/Img/footer-nuevo/dirtyPaws.png" alt="Dirty Paws" title="Dirty Paws"
-                                class="dirty-paws mt-5 ms-5">
-                        </a>
-                    </section>
-                </section>
-            </div>
-        </section>
-        <section id="aboutme" class="row main-movil m-5">
+    <main class="mb-5 pb-5">
+        <section id="aboutme" class="row m-5">
             <div class="col-12 col-md-6">
                 <section class="portfolio-experiment">
                     <a>
@@ -87,101 +47,42 @@
                     </a>
                 </section>
             </div>
-            <div class="col-12 col-md-6 container espaciador-cover">
-                <section class="row d-none d-md-block">
-                    <section class="contenedor-footer col-md-8">
-                        <a href="https://nosotros6.github.io/Teatro/" target="_blank" rel="noopener noreferrer">
-                            <img src="./assets/Img/footer-nuevo/teatro-dormido.png" alt="El Teatro Dormido" title="El Teatro Dormido"
-                                class="w-75 teatro mt-5">
-                        </a>
-                    </section>
-                    <section class="contenedor-footer col-md-4">
-                        <a href="https://nosotros6.github.io/desafio-td-ux/" target="_blank" rel="noopener noreferrer">
-                            <img src="./assets/Img/footer-nuevo/dirtyPaws.png" alt="Dirty Paws" title="Dirty Paws"
-                                class="dirty-paws mt-5 ms-5">
-                        </a>
-                    </section>
-                </section>
-            </div>
         </section>
     </main>
-    <footer class="row d-none d-md-block ms-5">
-        <section class="contenedor-footer col-md-3">
-            <a href="https://nosotros6.github.io/francisco-nocetti/" target="_blank" rel="noopener noreferrer">
-                <img src="./assets/Img/footer-nuevo/nocetti.png" alt="Blog Francisco Nocetti"
-                    title="Blog Francisco Nocetti" class="nocetti mx-5 mb-5">
-            </a>
-        </section>
-        <section class="contenedor-footer col-md-3">
-            <a href="https://nosotros6.github.io/cv-pili" target="_blank" rel="noopener noreferrer">
-                <img src="./assets/Img/footer-nuevo/portafolio-2021.png" alt="Portafolio 2021" title="Portafolio 2021"
-                    class="portafolio-2021 me-5 mb-5">
-            </a>
-        </section>
-        <section class="contenedor-footer col-md-3">
-            <a href="https://nosotros6.github.io/portafolio/" target="_blank" rel="noopener noreferrer">
-                <img src="./assets/Img/footer-nuevo/caqui-arbol.png" alt="Portafolio 2022" title="Portafolio 2022"
-                    class="caqui ms-5 mb-5">
-            </a>
-        </section>
-        <section class="contenedor-footer col-md-3">
-            <a href="https://nosotros6.github.io/Caleidos/" target="_blank" rel="noopener noreferrer">
-                <img src="./assets/Img/footer-nuevo/magda.png" alt="Fundación Entornasol" title="Fundación Entornasol"
-                    class="magda w-50 mx-5 mb-5">
-            </a>
-        </section>
-    </footer>
-    <!-- <footer>
-        <section id="sec-carrusel">
-            <div id="holaCarousel" class="carousel slide pb-3" data-bs-ride="carousel" data-bs-interval="3000"
-                data-bs-pause="false">
-
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <div class="row row-cols-4 gx-3">
-                            <div class="col">
-                                <img src="assets/Img/animales.png" class="d-block w-100" alt="...">
-                            </div>
-                            <div class="col">
-                                <img src="assets/Img/game.png" class="d-block w-100" alt="...">
-                            </div>
-                            <div class="col">
-                                <img src="assets/Img/landing-examen-td.png" class="d-block w-100" alt="...">
-                            </div>
-                            <div class="col">
-                                <img src="assets/Img/idma.png" class="d-block w-100" alt="...">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="row row-cols-4 gx-3">
-                            <div class="col">
-                                <img src="assets/Img/portafolioFrontend.png" class="d-block w-100" alt="...">
-                            </div>
-                            <div class="col">
-                                <img src="assets/Img/web-toolmania.png" class="d-block w-100" alt="...">
-                            </div>
-                            <div class="col">
-                                <img src="assets/Img/portafolio.png" class="d-block w-100" alt="...">
-                            </div>
-                            <div class="col">
-                                <img src="assets/Img/alfa-web.png" class="d-block w-100" alt="...">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div
-                    class="carousel-indicators text-center position-static py-3 mx-auto border-bottom border-2 border-secondary">
-                    <button type="button" data-bs-target="#holaCarousel" data-bs-slide-to="0" class="active"
-                        aria-current="true" aria-label="Slide 1"></button>
-                    <button type="button" data-bs-target="#holaCarousel" data-bs-slide-to="1"
-                        aria-label="Slide 2"></button>
+    <footer class="d-flex justify-content-center pt-5">
+        <div class="row row-cols-1 row-cols-md-3 g-4 mb-5">
+            <div class="col">
+                <div class="card h-100">
+                    <a href="https://nosotros6.github.io/Teatro/" target="_blank" rel="noopener noreferrer">
+                        <img src="./assets/Img/footer-nuevo/teatro-dormido.png" alt="El Teatro Dormido"
+                            title="El Teatro Dormido" class="w-75 mt-5">
+                    </a>
+                    <h5 class="card-title mx-0 mt-3">Creación de Contenidos</h5>
                 </div>
             </div>
-
-        </section>
-    </footer> -->
-
+            <div class="col">
+                <div class="card h-100">
+                    <a href="https://nosotros6.github.io/Caleidos/" target="_blank" rel="noopener noreferrer">
+                        <img src="./assets/Img/webEntornasol.png" alt="Fundación Entornasol"
+                            title="Fundación Entornasol" class="w-75 mt-5">
+                    </a>
+                    <div class="card-body">
+                        <h5 class="card-title m-0 p-0">Diseño UX/UI</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card h-100">
+                    <a href="https://toolmania.cl/" target="_blank" rel="noopener noreferrer">
+                        <img src="./assets/Img/toolmania-home.png" alt="Toolmania" title="Toolmania" class="w-75 mt-5">
+                    </a>
+                    <div class="card-body">
+                        <h5 class="card-title mx-0">Desarrollo Front End</h5>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
